--- a/styles/style.css
+++ b/styles/style.css
@@ -229,3 +229,254 @@
   font-size: 14px;
   margin: 0; 
 }
+
+.staff {
+  padding: 100px 0 40px;
+  background-image: url(../images/staff_picks_background.jpg);
+  
+}
+
+.staff__title {
+  text-align: center;
+  font-size: 44px;
+  color:#fff;
+  line-height: 52px;
+  margin: 0 0 24px;
+}
+
+.staff__subtitle {
+  text-align: center;
+  font-size: 20px;
+  color:#fff;
+  line-height: 30px;
+  font-weight: 400;
+  margin: 0;
+}
+
+
+.staff__cards {
+ max-width: 760px;
+ margin-top: 68px;
+ margin-left: auto;
+ margin-right:auto;
+ margin-bottom:68px;
+ gap: 40px;
+ display:flex;
+ flex-wrap: wrap;
+ justify-content: center;
+ list-style-type: none;
+}
+
+
+
+
+.card {
+  background-color: #fff;
+  border-radius: 6px;
+  padding: 32px 40px 20px 32px;
+  box-sizing: border-box;
+  width: 360px;
+  height:420px;
+
+  
+  
+ 
+}
+
+.card__content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.card__title {
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.card__text {
+  margin: 20px 0 0;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.card__footer {
+  margin: 0;
+  font-size: 14px;
+  line-height: 20px;
+  color: #838383;
+  margin-top: auto;
+}
+
+.membership {
+  padding: 100px 0 140px;
+  background-color: #f2f2f2;
+}
+
+.membership__title {
+  max-width: 574px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 44px;
+  font-weight: 500;
+  line-height: 52px;
+}
+
+.membership__steps {
+  list-style-type: none;
+  padding: 0;
+  margin: 100px 0 0;
+  display: flex;
+  justify-content: center;
+  
+
+}
+
+.step {
+  
+ flex-basis:220px;
+ margin: 40px;
+}
+ 
+.step__title {
+  margin: 0;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 700;
+  display: flex;
+  flex-direction: row;
+}
+
+.step__icon {
+  margin-left: 20px;
+}
+
+.step__description {
+  margin: 10px 0 0;
+  display: flex;
+}
+
+.about {
+  padding: 100px 80px;
+  background-color: #1f1f1f;
+  color: #fff;
+  overflow: hidden;
+  position: relative;
+  box-sizing: border-box;
+  margin-top:120px;
+}
+
+.about__title {
+  margin: 0;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 500;
+  z-index: 1;
+  max-width: 154px;
+}
+
+.about__content {
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 400;
+  max-width: 660px;
+  margin-top: 120px;
+  margin-left: auto;
+  margin-right:auto;
+  margin-bottom: 120px;
+  gap: 32px;
+}
+
+.about__circle {
+  background-color: #2f80ed;
+  width: 495px;
+  height: 495px;
+  border-radius: 50%;
+  margin-top: -800px;
+  margin-left:-242px;
+  margin-bottom:121px;
+  margin-right:90px;
+  
+
+  
+
+  
+}
+
+.footer {
+  box-sizing: border-box;
+  background-color: #1f1f1f;
+  color:#fff;
+  padding:57px 102px 60px 80px;
+}
+
+.footer__columns {
+  display:flex;
+}
+
+.footer__column_content_hours {
+  margin-left:auto;
+  
+}
+
+.footer__column_content_social {
+  margin-left:100px;
+  
+  
+}
+
+.footer__logo {
+  width:57px;
+  height:80px;
+}
+
+.footer__list {
+  
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer__list-item {
+  margin-bottom: 16px;
+  
+
+}
+.footer__list-item:last-of-type{
+  margin-bottom:0;
+
+}
+
+.footer__column-heading {
+  margin:0 0 20px;
+}
+
+.footer__column-link {
+  color: white;
+  font-size: 16px;
+  line-height: 20px;
+  text-decoration: none;
+  display:flex;
+  align-items: center;
+}
+
+.footer__column-link:hover{
+  color: #c1c1c1;
+
+}
+  
+   
+
+
+.footer__social-icon {
+  width:16px;
+  height:16px;
+  margin-right:10px;
+}
+
+.footer__copyright {
+  margin: 108px 0 0;
+}
