--- a/styles/style.css
+++ b/styles/style.css
@@ -274,7 +274,7 @@
  margin-left:auto;
  margin-right:auto;
  margin-bottom:0px;
- padding-left: 0%;
+ padding-left: 0;
  gap: 40px;
  display:flex;
  flex-wrap: wrap;
@@ -382,7 +382,8 @@
   overflow: hidden;
   position: relative;
   box-sizing: border-box;
-  margin-top:120px;
+  display:flex;
+  column-gap: 120px;
   z-index:1;
 }
 
@@ -393,8 +394,7 @@
   font-weight: 500;
   z-index: 1;
   max-width: 154px;
-  display:flex;
-  column-gap: 120px;
+  
 }
 
 .about__content {
@@ -407,9 +407,9 @@
   flex-direction: column;
 }
 .about__paragraph{
-  margin-top: 32px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-top: 0;
+  margin-bottom:0;
+  
   
 }
 
